--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
             resultadoDiv.innerHTML = `Tiempo total: ${textoTiempo} <br> Tarifa total: **$${tarifaTotal}**`;
         }
     </script>
-
+<p> IMRL </>
 </body>
 </html>
+
